--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     container_name: web
     build: /usr/local/hello_flask
-    command: bash -c "gunicorn app.wsgi_app:application --bind 0.0.0.0:5000 --keep-alive 1"
+    command: bash -c "gunicorn wsgi:app --bind 0.0.0.0:5000 --keep-alive 1"
     environment:
       - TZ=Asia/Taipei
     ports:
